Atualização (operação com dropdown)
Demonstração de operação condicional com dropdown

--- a/Aula04JavaEE/web/index.html
+++ b/Aula04JavaEE/web/index.html
@@ -23,5 +23,17 @@ and open the template in the editor.
             <input type="number" name="n2"/>
             <input type="submit" value="Calcular"/>
         </form>
+        <h3>Operação aritmética</h3>
+        <form action="operacao-aritmetica.html">
+            <input type="number" name="n1"/>
+            <select name="operador">
+                <option value="+">somado com</option>
+                <option value="-">subtraído por</option>
+                <option value="/">dividido por</option>
+                <option value="*">multiplicado por</option>
+            </select>
+            <input type="number" name="n2"/>
+            <input type="submit" value="Calcular"/>
+        </form>
     </body>
 </html>
